security/4pods-network-policies.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"external"},"name":"external","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"External Facing Application"},{"name":"BG_COLOR","value":"red"}],"image":"kodekloud/webapp-conntest","name":"external","ports":[{"containerPort":8080}]}]}}
    creationTimestamp: "2024-12-23T20:02:01Z"
    labels:
      name: external
    name: external
    namespace: default
    resourceVersion: "3838"
    uid: 06860e0d-5740-4a47-90a2-4fe91446626f
  spec:
    containers:
    - env:
      - name: APP_NAME
        value: External Facing Application
      - name: BG_COLOR
        value: red
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: external
      ports:
      - containerPort: 8080
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-lxkb8
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: controlplane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-lxkb8
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:07Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:07Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:07Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://15219cc30aa4ad5aa06b7d9b726022616ee56d7278af7cfd18b5391cf617833a
      image: docker.io/kodekloud/webapp-conntest:latest
      imageID: docker.io/kodekloud/webapp-conntest@sha256:b87d6b99f127ef10274e4447b3a151127688369b82eab09eba6ab6a84e6c5689
      lastState: {}
      name: external
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2024-12-23T20:02:06Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-lxkb8
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 192.16.165.8
    hostIPs:
    - ip: 192.16.165.8
    phase: Running
    podIP: 10.244.0.4
    podIPs:
    - ip: 10.244.0.4
    qosClass: BestEffort
    startTime: "2024-12-23T20:02:01Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"internal"},"name":"internal","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"Internal Facing Application"},{"name":"BG_COLOR","value":"blue"}],"image":"kodekloud/webapp-conntest","name":"internal","ports":[{"containerPort":8080}]}]}}
    creationTimestamp: "2024-12-23T20:02:01Z"
    labels:
      name: internal
    name: internal
    namespace: default
    resourceVersion: "3882"
    uid: 1f8bf18e-0ee5-41b1-ad5c-5bdd57834866
  spec:
    containers:
    - env:
      - name: APP_NAME
        value: Internal Facing Application
      - name: BG_COLOR
        value: blue
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: internal
      ports:
      - containerPort: 8080
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-c8nkv
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: controlplane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-c8nkv
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://1c413a05102fb4cc35ac45b69ba1b4fd14c5dd0fb9c1c5b62870045132aff071
      image: docker.io/kodekloud/webapp-conntest:latest
      imageID: docker.io/kodekloud/webapp-conntest@sha256:b87d6b99f127ef10274e4447b3a151127688369b82eab09eba6ab6a84e6c5689
      lastState: {}
      name: internal
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2024-12-23T20:02:23Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-c8nkv
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 192.16.165.8
    hostIPs:
    - ip: 192.16.165.8
    phase: Running
    podIP: 10.244.0.7
    podIPs:
    - ip: 10.244.0.7
    qosClass: BestEffort
    startTime: "2024-12-23T20:02:01Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"mysql"},"name":"mysql","namespace":"default"},"spec":{"containers":[{"env":[{"name":"MYSQL_ROOT_PASSWORD","value":"paswrd"}],"image":"mysql","name":"mysql","ports":[{"containerPort":3306}]}]}}
    creationTimestamp: "2024-12-23T20:02:01Z"
    labels:
      name: mysql
    name: mysql
    namespace: default
    resourceVersion: "3879"
    uid: 19e1d581-3aab-4e4e-857e-397f9c7c3bbf
  spec:
    containers:
    - env:
      - name: MYSQL_ROOT_PASSWORD
        value: paswrd
      image: mysql
      imagePullPolicy: Always
      name: mysql
      ports:
      - containerPort: 3306
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-24khx
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: controlplane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-24khx
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:24Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://30032aea1f09d5f60f9d7ff583832e029ccc9471a8759a06335750383842fa53
      image: docker.io/library/mysql:latest
      imageID: docker.io/library/mysql@sha256:0255b469f0135a0236d672d60e3154ae2f4538b146744966d96440318cc822c6
      lastState: {}
      name: mysql
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2024-12-23T20:02:23Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-24khx
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 192.16.165.8
    hostIPs:
    - ip: 192.16.165.8
    phase: Running
    podIP: 10.244.0.5
    podIPs:
    - ip: 10.244.0.5
    qosClass: BestEffort
    startTime: "2024-12-23T20:02:01Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"payroll"},"name":"payroll","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"Payroll Application"},{"name":"BG_COLOR","value":"blue"}],"image":"kodekloud/webapp-conntest","name":"payroll","ports":[{"containerPort":8080}]}]}}
    creationTimestamp: "2024-12-23T20:02:01Z"
    labels:
      name: payroll
    name: payroll
    namespace: default
    resourceVersion: "3842"
    uid: e6c3363c-4f0e-4f1f-9e68-136e647c7e40
  spec:
    containers:
    - env:
      - name: APP_NAME
        value: Payroll Application
      - name: BG_COLOR
        value: blue
      image: kodekloud/webapp-conntest
      imagePullPolicy: Always
      name: payroll
      ports:
      - containerPort: 8080
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-pxcsd
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: controlplane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-pxcsd
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:08Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:08Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:08Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2024-12-23T20:02:01Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://10fa78923f3c6e017921bf1069d17c467a9d82e202bfcd050a006424fee3e963
      image: docker.io/kodekloud/webapp-conntest:latest
      imageID: docker.io/kodekloud/webapp-conntest@sha256:b87d6b99f127ef10274e4447b3a151127688369b82eab09eba6ab6a84e6c5689
      lastState: {}
      name: payroll
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2024-12-23T20:02:07Z"
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-pxcsd
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 192.16.165.8
    hostIPs:
    - ip: 192.16.165.8
    phase: Running
    podIP: 10.244.0.6
    podIPs:
    - ip: 10.244.0.6
    qosClass: BestEffort
    startTime: "2024-12-23T20:02:01Z"
kind: List
metadata:
  resourceVersion: ""
